@@ -1,139 +1,183 @@
 package org.phoebus.channelfinder;
 
 import static java.lang.Math.min;
-import static org.phoebus.channelfinder.configuration.PopulateDBConfiguration.valBucket;
-import static org.phoebus.channelfinder.configuration.PopulateDBConfiguration.valBucketSize;
 
-import java.io.IOException;
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.TestInstance;
-import org.junit.jupiter.api.condition.EnabledIfEnvironmentVariable;
-import org.phoebus.channelfinder.configuration.ElasticConfig;
-import org.phoebus.channelfinder.configuration.PopulateDBConfiguration;
+import org.phoebus.channelfinder.entity.Channel;
+import org.phoebus.channelfinder.entity.Property;
 import org.phoebus.channelfinder.entity.SearchResult;
+import org.phoebus.channelfinder.entity.Tag;
 import org.phoebus.channelfinder.repository.ChannelRepository;
 import org.phoebus.channelfinder.repository.PropertyRepository;
 import org.phoebus.channelfinder.repository.TagRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.webmvc.test.autoconfigure.WebMvcTest;
-import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.TestPropertySource;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
 
-@TestInstance(TestInstance.Lifecycle.PER_CLASS)
-@WebMvcTest(ChannelRepository.class)
-@TestPropertySource(locations = "classpath:application_test.properties")
-@EnabledIfEnvironmentVariable(
-    named = "GITHUB_ACTIONS",
-    matches = "true",
-    disabledReason = "Requires Elasticsearch on localhost:9200; runs in CI only")
-@ContextConfiguration(classes = {ChannelRepository.class, ElasticConfig.class})
-class ChannelRepositorySearchIT {
+class ChannelRepositorySearchIT extends AbstractElasticsearchIT {
   private static final Logger logger = Logger.getLogger(ChannelRepositorySearchIT.class.getName());
 
-  // Need at least 10 000 channels to test Elastic search beyond the 10 000 default result limit
-  // So needs to be a minimum of 7
-  private final int CELLS = 100;
+  // Distribution buckets: valBucket[i] channels get tag/property with value valBucket[i]
+  // valBucketSize[i] is the count of channels assigned to bucket i (totals to 1000 per cell)
+  static final List<Integer> valBucket = List.of(0, 1, 2, 5, 10, 20, 50, 100, 200, 500);
+  static final List<Integer> valBucketSize =
+      List.of(
+          1000 - valBucket.stream().mapToInt(Integer::intValue).sum(),
+          1,
+          2,
+          5,
+          10,
+          20,
+          50,
+          100,
+          200,
+          500);
+
+  // 10 groups × CELLS × 1000 channels must exceed ELASTIC_LIMIT (10 000) — minimum CELLS is 2
+  private final int CELLS = 2;
+
   @Autowired ChannelRepository channelRepository;
   @Autowired TagRepository tagRepository;
   @Autowired PropertyRepository propertyRepository;
-  @Autowired ElasticConfig esService;
-  @Autowired PopulateDBConfiguration populateDBConfiguration;
 
   @Value("${elasticsearch.query.size:10000}")
   int ELASTIC_LIMIT;
 
-  @BeforeAll
-  void setupAll() {
-    ElasticConfigIT.setUp(esService);
-  }
+  private final List<String> channelNames = new ArrayList<>();
 
   @BeforeEach
-  void setup() throws InterruptedException, IOException {
-    populateDBConfiguration.cleanupDB();
-    populateDBConfiguration.createDB(CELLS);
+  public void setup() throws InterruptedException {
+    cleanup();
+    populateTestData();
     Thread.sleep(5000);
   }
 
   @AfterEach
-  public void cleanup() throws InterruptedException {
-    populateDBConfiguration.cleanupDB();
+  public void cleanup() {
+    MultiValueMap<String, String> map = new LinkedMultiValueMap<>();
+    map.set("~name", "*");
+    channelRepository
+        .search(map)
+        .channels()
+        .forEach(c -> channelRepository.deleteById(c.getName()));
+    tagRepository.findAll().forEach(t -> tagRepository.deleteById(t.getName()));
+    propertyRepository.findAll().forEach(p -> propertyRepository.deleteById(p.getName()));
+    channelNames.clear();
   }
 
   /**
-   * Test searching for channel Note: the search tests are merged into a single test as an
-   * optimization. The population of the data cannot be performed in the @beforeClass since the
-   * springboot beans are not initialized hence the need to use @Before
+   * Populate test data with self-documenting channel names: - For each group g (0-9) and each
+   * bucket value v from valBucket: - CELLS * valBucketSize[bi] channels named
+   * channel_group{g}_tag{v}_{k} - Each channel carries exactly one property (group{g}=v) and one
+   * tag (group{g}_{v}) Total channels: 10 * CELLS * 1000
    */
+  private void populateTestData() {
+    // Create group properties
+    List<Property> properties = new ArrayList<>();
+    for (int g = 0; g < 10; g++) {
+      properties.add(new Property("group" + g, "testOwner"));
+    }
+    propertyRepository.indexAll(properties);
+
+    // Create group tags — for each group id and each bucket value
+    List<Tag> tags = new ArrayList<>();
+    for (int g = 0; g < 10; g++) {
+      for (int v : valBucket) {
+        tags.add(new Tag("group" + g + "_" + v, "testOwner"));
+      }
+    }
+    tagRepository.indexAll(tags);
+
+    // Create channels: name encodes the single group property and tag each channel holds
+    for (int g = 0; g < 10; g++) {
+      List<Channel> batch = new ArrayList<>();
+      for (int bi = 0; bi < valBucket.size(); bi++) {
+        int v = valBucket.get(bi);
+        int count = CELLS * valBucketSize.get(bi);
+        Property prop = new Property("group" + g, "testOwner", String.valueOf(v));
+        Tag tag = new Tag("group" + g + "_" + v, "testOwner");
+        for (int k = 0; k < count; k++) {
+          String name = "channel_group" + g + "_tag" + v + "_" + k;
+          Channel c = new Channel(name, "testOwner", List.of(prop), List.of(tag));
+          batch.add(c);
+          channelNames.add(name);
+        }
+      }
+      channelRepository.indexAll(batch);
+    }
+  }
+
   @Test
   void searchTest() {
-    List<String> channelNames =
-        Arrays.asList(populateDBConfiguration.getChannelList().toArray(new String[0]));
+    MultiValueMap<String, String> searchParameters = new LinkedMultiValueMap<>();
 
-    MultiValueMap<String, String> searchParameters = new LinkedMultiValueMap<String, String>();
-    // logger.log(Level.INFO, "Search for a single unique channel " + channelNames.get(0));
-
+    // Search for a single unique channel by exact name
     searchParameters.add("~name", channelNames.get(0));
     SearchResult result = channelRepository.search(searchParameters);
     long countResult = channelRepository.count(searchParameters);
     Assertions.assertEquals(1, result.count());
     Assertions.assertEquals(1, result.channels().size());
     Assertions.assertEquals(1, countResult);
-    Assertions.assertEquals(result.channels().get(0).getName(), channelNames.get(0));
+    Assertions.assertEquals(result.channels().getFirst().getName(), channelNames.getFirst());
 
-    logger.log(Level.INFO, "Search for all channels via wildcards");
-    searchName(2, 2, "BR:C001-BI:2{BLA}Pos:?-RB");
+    // ? wildcard across groups: valBucketSize[1]=1 and CELLS=2 gives k=0,1; suffix "_0" picks k=0
+    logger.log(Level.INFO, "Search with ? wildcard across groups");
+    searchName(10, 10, "channel_group?_tag1_0");
 
-    searchName(4, 4, "BR:C001-BI:?{BLA}Pos:*");
+    // ? wildcard within one group/tag: matches k=0..CELLS-1 (assumes CELLS < 10)
+    logger.log(Level.INFO, "Search with ? wildcard within a group/tag");
+    searchName(CELLS, CELLS, "channel_group0_tag1_?");
 
-    logger.log(Level.INFO, "Search for all 1000 channels");
-    searchName(min(1000 * CELLS, ELASTIC_LIMIT), 1000 * CELLS, "SR*");
+    // * wildcard: all channels across all groups
+    long totalChannels = 10L * CELLS * 1000;
+    long elasticDefaultCount = min(totalChannels, ELASTIC_LIMIT);
+    logger.log(Level.INFO, "Search for all {0} channels via *", totalChannels);
+    searchName((int) elasticDefaultCount, (int) totalChannels, "channel_*");
 
-    logger.log(Level.INFO, "Search for all 1000 SR channels and all 500 booster channels");
-    long allCount = 1500 * CELLS;
-    long elasticDefaultCount = min(allCount, ELASTIC_LIMIT);
+    // OR search: two groups via | and , produce the same results
+    logger.log(Level.INFO, "Search for two groups via | and ,");
+    long twoGroupCount = 2L * CELLS * 1000;
+    long twoGroupElastic = min(twoGroupCount, ELASTIC_LIMIT);
     searchParameters.clear();
-    searchParameters.add("~name", "SR*|BR*");
-    assertSearchCount(elasticDefaultCount, (int) elasticDefaultCount, allCount, searchParameters);
+    searchParameters.add("~name", "channel_group0_*|channel_group1_*");
+    assertSearchCount(twoGroupElastic, (int) twoGroupElastic, twoGroupCount, searchParameters);
 
     searchParameters.clear();
-    searchParameters.add("~name", "SR*,BR*");
-    assertSearchCount(elasticDefaultCount, (int) elasticDefaultCount, allCount, searchParameters);
+    searchParameters.add("~name", "channel_group0_*,channel_group1_*");
+    assertSearchCount(twoGroupElastic, (int) twoGroupElastic, twoGroupCount, searchParameters);
 
-    logger.log(Level.INFO, "Search for all 1000 SR channels and all 500 booster channels");
+    // track_total_hits: verify exact count beyond ELASTIC_LIMIT
+    logger.log(Level.INFO, "Search with track_total_hits for accurate total count");
     searchParameters.clear();
-    searchParameters.add("~name", "SR*|BR*");
+    searchParameters.add("~name", "channel_*");
     searchParameters.add("~track_total_hits", "true");
-    assertSearchCount(allCount, (int) elasticDefaultCount, allCount, searchParameters);
+    assertSearchCount(totalChannels, (int) elasticDefaultCount, totalChannels, searchParameters);
 
     searchParameters.clear();
-    searchParameters.add("~name", "SR*,BR*");
+    searchParameters.add("~name", "channel_group0_*,channel_group1_*");
     searchParameters.add("~track_total_hits", "true");
-    assertSearchCount(allCount, (int) elasticDefaultCount, allCount, searchParameters);
+    assertSearchCount(twoGroupCount, (int) twoGroupElastic, twoGroupCount, searchParameters);
 
-    logger.log(Level.INFO, "Search for channels based on a tag");
-    for (long id = 1; id < valBucket.size(); id++) {
-
-      for (int bucket_index = 0; bucket_index < valBucket.size(); bucket_index++) {
+    // Property and tag searches: verify counts per group and bucket
+    logger.log(Level.INFO, "Search for channels based on a tag or property");
+    for (int id = 1; id < valBucket.size(); id++) {
+      for (int bucketIndex = 0; bucketIndex < valBucket.size(); bucketIndex++) {
         checkGroup(
-            valBucketSize.get(bucket_index),
+            valBucketSize.get(bucketIndex),
             "~tag",
-            "group" + id + "_" + valBucket.get(bucket_index));
+            "group" + id + "_" + valBucket.get(bucketIndex));
         checkGroup(
-            valBucketSize.get(bucket_index),
+            valBucketSize.get(bucketIndex),
             "group" + id,
-            String.valueOf(valBucket.get(bucket_index)));
+            String.valueOf(valBucket.get(bucketIndex)));
       }
     }
   }
@@ -151,15 +195,10 @@ class ChannelRepositorySearchIT {
       MultiValueMap<String, String> searchParameters) {
     logger.log(
         Level.INFO,
-        "Search for "
-            + searchParameters
-            + " expected "
-            + expectedResultCount
-            + " results "
-            + expectedChannelsCount
-            + " channels "
-            + expectedQueryCount
-            + " queries");
+        "Search for {0} expected {1} results {2} channels {3} queries",
+        new Object[] {
+          searchParameters, expectedResultCount, expectedChannelsCount, expectedQueryCount
+        });
     // Act
     SearchResult result = channelRepository.search(searchParameters);
 
@@ -170,16 +209,15 @@ class ChannelRepositorySearchIT {
   }
 
   private void checkGroup(int bucket, String key, String value) {
-    MultiValueMap<String, String> searchParameters = new LinkedMultiValueMap<String, String>();
-
-    searchParameters.add("~name", "SR*");
+    MultiValueMap<String, String> searchParameters = new LinkedMultiValueMap<>();
     searchParameters.add(key, value);
 
     SearchResult result = channelRepository.search(searchParameters);
     Integer expectedCount = CELLS * bucket;
     logger.log(
         Level.INFO,
-        "Search for " + maptoString(searchParameters) + " expected " + expectedCount + " results");
+        "Search for {0} expected {1} results",
+        new Object[] {maptoString(searchParameters), expectedCount});
     Assertions.assertEquals(
         min(expectedCount, ELASTIC_LIMIT),
         Integer.valueOf(result.channels().size()),
@@ -192,10 +230,5 @@ class ChannelRepositorySearchIT {
     StringBuffer sb = new StringBuffer();
     searchParameters.forEach((key, value) -> sb.append(key).append(" ").append(value));
     return sb.toString();
-  }
-
-  @AfterAll
-  void tearDown() throws IOException {
-    ElasticConfigIT.teardown(esService);
   }
 }
